build_errors_v3.txt
[DEBUG build_start] Build function started (session: A)
[DEBUG target_optimize_setup] Target and optimize options set (session: A)
[DEBUG build_complete] Build function completed successfully (session: A)
install
+- install nyon_game
   +- compile exe nyon_game Debug native 2 errors
src\raylib_stub.zig:108:8: error: duplicate struct member name 'vec3Distance'
pub fn vec3Distance(v1: Vector3, v2: Vector3) f32 {
       ^~~~~~~~~~~~
src\raylib_stub.zig:990:8: note: duplicate name here
pub fn vec3Distance(v1: Vector3, v2: Vector3) f32 {
       ^~~~~~~~~~~~
src\raylib_stub.zig:1:1: note: struct declared here
//! Improved raylib stub designed for easy migration to raylib-zig
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src\raylib_stub.zig:533:8: error: duplicate struct member name 'getCameraMatrix'
pub fn getCameraMatrix(camera: Camera3D) Matrix {
       ^~~~~~~~~~~~~~~
src\raylib_stub.zig:1001:8: note: duplicate name here
pub fn getCameraMatrix(camera: Camera3D) Matrix {
       ^~~~~~~~~~~~~~~
src\raylib_stub.zig:1:1: note: struct declared here
//! Improved raylib stub designed for easy migration to raylib-zig
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
error: 2 compilation errors
failed command: "C:\\Users\\donald\\AppData\\Roaming\\Antigravity\\User\\globalStorage\\ziglang.vscode-zig\\zig\\x86_64-windows-0.16.0-dev.2040+c475f1fcd\\zig.exe" build-exe -ODebug --dep raylib=raygui --dep raygui --dep zglfw --dep nyon_game "-Mroot=C:\\Users\\donald\\nyon-game\\src\\main.zig" "-Mraygui=C:\\Users\\donald\\nyon-game\\src\\raylib_stub.zig" "-Mzglfw=C:\\Users\\donald\\nyon-game\\src\\raylib_stub.zig" -ODebug --dep raylib=raygui --dep raygui --dep zglfw --dep sysgpu --dep nyon_game "-Mnyon_game=C:\\Users\\donald\\nyon-game\\src\\root.zig" -ODebug "-Msysgpu=C:\\Users\\donald\\nyon-game\\src\\vendor\\sysgpu\\main.zig" -lc --cache-dir .zig-cache --global-cache-dir "C:\\Users\\donald\\AppData\\Local\\zig" --name nyon_game --zig-lib-dir "C:\\Users\\donald\\AppData\\Roaming\\Antigravity\\User\\globalStorage\\ziglang.vscode-zig\\zig\\x86_64-windows-0.16.0-dev.2040+c475f1fcd\\lib\\" --listen=-

install
+- install nyon_editor
   +- compile exe nyon_editor Debug native 2 errors
src\raylib_stub.zig:108:8: error: duplicate struct member name 'vec3Distance'
pub fn vec3Distance(v1: Vector3, v2: Vector3) f32 {
       ^~~~~~~~~~~~
src\raylib_stub.zig:990:8: note: duplicate name here
pub fn vec3Distance(v1: Vector3, v2: Vector3) f32 {
       ^~~~~~~~~~~~
src\raylib_stub.zig:1:1: note: struct declared here
//! Improved raylib stub designed for easy migration to raylib-zig
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src\raylib_stub.zig:533:8: error: duplicate struct member name 'getCameraMatrix'
pub fn getCameraMatrix(camera: Camera3D) Matrix {
       ^~~~~~~~~~~~~~~
src\raylib_stub.zig:1001:8: note: duplicate name here
pub fn getCameraMatrix(camera: Camera3D) Matrix {
       ^~~~~~~~~~~~~~~
src\raylib_stub.zig:1:1: note: struct declared here
//! Improved raylib stub designed for easy migration to raylib-zig
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
error: 2 compilation errors
failed command: "C:\\Users\\donald\\AppData\\Roaming\\Antigravity\\User\\globalStorage\\ziglang.vscode-zig\\zig\\x86_64-windows-0.16.0-dev.2040+c475f1fcd\\zig.exe" build-exe -ODebug --dep raylib=raygui --dep raygui --dep zglfw --dep nyon_game "-Mroot=C:\\Users\\donald\\nyon-game\\src\\editor.zig" "-Mraygui=C:\\Users\\donald\\nyon-game\\src\\raylib_stub.zig" "-Mzglfw=C:\\Users\\donald\\nyon-game\\src\\raylib_stub.zig" -ODebug --dep raylib=raygui --dep raygui --dep zglfw --dep sysgpu --dep nyon_game "-Mnyon_game=C:\\Users\\donald\\nyon-game\\src\\root.zig" -ODebug "-Msysgpu=C:\\Users\\donald\\nyon-game\\src\\vendor\\sysgpu\\main.zig" -lc --cache-dir .zig-cache --global-cache-dir "C:\\Users\\donald\\AppData\\Local\\zig" --name nyon_editor --zig-lib-dir "C:\\Users\\donald\\AppData\\Roaming\\Antigravity\\User\\globalStorage\\ziglang.vscode-zig\\zig\\x86_64-windows-0.16.0-dev.2040+c475f1fcd\\lib\\" --listen=-

Build Summary: 0/5 steps succeeded (2 failed)
install transitive failure
+- install nyon_game transitive failure
|  +- compile exe nyon_game Debug native 2 errors
+- install nyon_editor transitive failure
   +- compile exe nyon_editor Debug native 2 errors

error: the following build command failed with exit code 1:
.zig-cache\o\48f283d057ff3818d09c60beef4fd871\build.exe C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.2040+c475f1fcd\zig.exe C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.2040+c475f1fcd\lib C:\Users\donald\nyon-game .zig-cache C:\Users\donald\AppData\Local\zig --seed 0x4155089a -Z8ac89c05a2a71102
